force-app/main/default/objects/Hospitality__c/fields/Completed_Restaurant_Visits__c.field-meta.xml
<CustomField>
    <fullName>Completed_Restaurant_Visits__c</fullName>
    <label>Completed Restaurant Visits</label>
    <summaryFilterItems>
        <field>Guest_Reservation__c.Is_Visit_Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Guest_Reservation__c.Hospitality__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>