force-app/main/default/objects/Hospitality__c/fields/Total_Restaurant_Reservations__c.field-meta.xml
<CustomField>
    <fullName>Total_Restaurant_Reservations__c</fullName>
    <label>Total Restaurant Reservations</label>
    <summaryForeignKey>Guest_Reservation__c.Hospitality__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>