force-app/main/default/objects/Hospitality__c/recordTypes/Hotel.recordType-meta.xml
<RecordType>
    <fullName>Hotel</fullName>
    <active>true</active>
    <label>Hotel</label>
</RecordType>