force-app/main/default/objects/Hospitality__c/recordTypes/Restaurant.recordType-meta.xml
<RecordType>
    <fullName>Restaurant</fullName>
    <active>true</active>
    <label>Restaurant</label>
</RecordType>